appId: com.nymcard.masaar
androidWebViewHierarchy: devtools

tags:
  - checkout
  - load_funds
  - new_card
  - success

---
# Load element definitions from POM of home screen
- runFlow:
    label: Load element definitions for home
    commands:
      - runScript:
          file: ../elements/home.js

# Load element definitions from POM of checkout flow
- runFlow:
    label: Load element definitions for checkout
    commands:
      - runScript:
          file: ../elements/checkout.js

# Run login flow from "LoginSuccess.yaml"
- runFlow:
    file: ../auth/login/LoginSuccess.yaml
    env:
      PHONE: "508622535"
      PASSCODE: "888556"

- assertVisible:
    label: Verify view balance (eye button) on card visible on home screen
    id: ${output.home.viewBalance}

# Tap on eye icon to let the test framework able to copy value from UI
- tapOn:
    label: Tap on view balance button
    id: ${output.home.viewBalance}

# Copying balance amount before loading funds
- copyTextFrom:
    label: Copy balance amount
    id: ${output.home.balanceAmount}

# Storing current balance formatted copied from UI
- evalScript: ${output.oldBalanceFormatted = maestro.copiedText}

# Storing current balance copied from UI
- evalScript: ${output.oldBalance = Number(maestro.copiedText.replace(/[^0-9.]/g, ""))}

- assertVisible:
    label: Verify Load Funds option visible on Home screen
    id: ${output.checkout.homeLoadFundsTile}

- tapOn:
    label: Tap on load funds option on Home Screen
    id: ${output.checkout.homeLoadFundsTile}

# Ensuring navigated to Select Card screen by asserting screen title visibility
- assertVisible:
    label: Verify Select Card screen visible
    id: ${output.checkout.selectCardScreen}

- assertVisible:
    label: Verify Use Another Card option visible
    id: ${output.checkout.useAnotherCard}

- tapOn:
    label: Tap on use another card option to navigate to load funds via card screen
    id: ${output.checkout.useAnotherCard}

# Ensuring navigated to Load funds via card screen by asserting screen title visibility
- assertVisible:
    label: Verify Use Load funds via Card screen visible
    id: ${output.checkout.loadFundsViaCardScreen}

# Ensure card number input field visible
- assertVisible:
    label: Verify Card number input visible
    id: ${output.checkout.cardNumberInput}

- tapOn:
    label: Focus input on card number input
    id: ${output.checkout.cardNumberInput}

- inputText:
    label: Enter valid card number
    text: "4242424242424242"

- assertVisible:
    label: Verify Card expiry input visible
    id: ${output.checkout.cardExpiryInput}

- tapOn:
    label: Focus input on card expiry input
    id: ${output.checkout.cardExpiryInput}

- inputText:
    label: Enter valid card expiry
    text: "0927"

- assertVisible:
    label: Verify CVV input visible
    id: ${output.checkout.cvvInput}

- tapOn:
    label: Focus input on CVV input
    id: ${output.checkout.cvvInput}

- inputText:
    label: Enter a valid CVV
    text: "200"

# Scroll form page up to see fields hidden behind keyboard
- scroll:
    label: Scroll to see full form

- assertVisible:
    label: Verify Card holder input visible
    id: ${output.checkout.cardHolderInput}

- tapOn:
    label: Focus input on Card holder input
    id: ${output.checkout.cardHolderInput}

- inputText:
    label: Enter Card holder name in input
    text: "MUHAY UDDIN"

# Scroll form page up to see fields hidden behind keyboard
- scroll:
    label: Scroll to see full form

- assertVisible:
    label: Verify Save card toggle visible
    id: ${output.checkout.saveCard}

- tapOn:
    label: Save card toggle
    id: ${output.checkout.saveCard}

- assertVisible:
    label: Verify Confirm button visible
    id: ${output.checkout.confirm}

# Tap on confirm button to navigate to enter amount screen
- tapOn:
    label: Tap on Confirm button
    id: ${output.checkout.confirm}

- assertVisible:
    label: Verify Enter amount input visible
    id: ${output.checkout.enterAmountInput}

# Tap on enter amount input
- tapOn:
    label: Tap on enter amount input
    id: ${output.checkout.enterAmountInput}

- inputText:
    label: Enter some amount
    text: "100"

- assertVisible:
    label: Verify Continue button visible
    id: ${output.checkout.continueLoadFunds}
    enabled: true

# Tap on continue button to navigate transaction summary screen
- tapOn:
    label: Tap on Continue button to view transaction summary screen
    id: ${output.checkout.continueLoadFunds}

# Waiting for loading view to be dismissed with an arbitrary timeout value
- runFlow:
    when:
      platform: ios
    commands:
      - extendedWaitUntil:
          notVisible:
            id: loadingView
          timeout: 30000

# Ensuring navigate to "Transaction summary" screen by asserting screen title visiblity
- assertVisible:
    label: Verify Transaction summary visible
    id: ${output.checkout.transactionSummary}

- assertVisible:
    label: Verify Pay now button visible
    id: ${output.checkout.payNow}

- tapOn:
    label: Tap on Pay now button to proceed to 3DS checkout authentication
    id: ${output.checkout.payNow}

# Waiting for 25 seconds to let web view loads 3ds screen
- extendedWaitUntil:
    label: Wait for 3DS checkout authentication screen appear
    visible: "Hint: Checkout1!"
    timeout: 25000

- tapOn:
    label: Tap on password input field for keyboard focus
    text: "Hint: Checkout1!"

- inputText:
    label: Entering testing password
    text: "Checkout1!"

# Verify "Continue" text button visible in web page
- assertVisible:
    label: Verify Continue button visible
    text: "Continue"

- tapOn:
    label: Tap on Continue button to complete checkout
    text: "Continue"

# Ensuring Transaction submitted receipt screen visible by asserting screen title
- assertVisible:
    label: Verify Transaction submitted screen visible
    id: ${output.checkout.receiptTitle}

# Ensuring right transaction type receipt is generated in flow
- assertVisible:
    label: Verify transaction type is visible and of Load fund type
    id: ${output.checkout.transactionType}

- assertVisible:
    label: Verify back to home button visible
    id: ${output.checkout.backToHome}

# Capture platform-specific screenshots
- runFlow:
    label: Take Load funds successful Android screenshot
    when:
      platform: android
    commands:
      - takeScreenshot: LoadFundsViaCardSuccessAndroid

- runFlow:
    label: Take Load funds successful screenshot
    when:
      platform: ios
    commands:
      - takeScreenshot: LoadFundsViaCardSuccessIOS

# TODO: Needs to be replace with appropriate solution
# Adding some delay for 25 seconds for completion of payment processing on Checkout.com PCI widget end before viewing new balance
# Just a hack to let the balance update
# This is an arbitrary time to let the balance update
- extendedWaitUntil:
    visible: "*"
    optional: true
    timeout: 25000

- tapOn:
    label: Tap on back to home button
    id: ${output.checkout.backToHome}

- assertVisible:
    label: Verify view balance button visible on home screen
    id: ${output.home.viewBalance}

# Tap on eye icon to let the maestro able to copy value from UI
- tapOn:
    label: Tap on view balance button
    id: ${output.home.viewBalance}

# Copy balance value from UI
- copyTextFrom:
    label: Copy balance amount
    id: ${output.home.balanceAmount}

# Storing updated balance value in variable
- evalScript: ${output.updatedBalance = Number(maestro.copiedText.replace(/[^0-9.]/g, ""))}

# Evaluating if balance values updated
- evalScript: ${
    const current = output.oldBalance;
    const newBalance = output.updatedBalance;

    if (newBalance > current) {
        output.action = "BALANCE_UPDATED";
    }

    else if (newBalance === current) {
        output.action = "BALANCE_NOT_UPDATED";
    }}

# Checking if old balance value not visible
- assertNotVisible:
    label: Verify if Old balance value not visible
    text: ${output.oldBalanceFormatted}

# Capture platform specific screenshot if condition is satisfied
- runFlow:
    when:
      true: ${output.action === "BALANCE_UPDATED"}
    commands:
      - runFlow:
          label: Take Load funds successful Android screenshot
          when:
            platform: android
          commands:
            - takeScreenshot: LoadFundsViaCardBalanceUpdatedSuccessAndroid

      - runFlow:
          label: Take Load funds successful screenshot
          when:
            platform: ios
          commands:
            - takeScreenshot: LoadFundsViaCardBalanceUpdatedSuccessIOS
